# kaggle-expedia-hotel-recommendations

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.ipynb
conf/: random_forest.yaml  xgb.yaml
docker/: Dockerfile
docker/jupyter/: Dockerfile
docker/mlflow/: Dockerfile
project/docs/: conf.py
project/notebooks/: eda.ipynb
src/: main.py
src/dataset/: data_manager.py  shema.py
src/jobs/: predict.py  preprocess.py  retrieve.py  train.py
src/models/: base_model.py  eval.py  models.py  preprocess.py  randomforest_classifier.py  xgb_classifier.py
