[tool.poetry]
name = "kaggle-expedia-hotel-recommendations"
version = "0.1.0"
description = ""
authors = ["ac2393921 <ac2393921@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "1.22.0"
numpy = "1.23.4"
protobuf = "3.20.1"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"
xgboost = "^1.7.4"
scikit-learn = "^1.2.1"
pandera = "^0.13.4"
pydantic = "^1.10.5"
loguru = "^0.6.0"
Hydra = "^2.5"
omegaconf = "^2.3.0"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs]
in-project = true
